--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -5,3 +5,8 @@ services:
     hostname: redis
     ports:
       - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli","ping"]
+      interval: 10s
+      timeout: 10s
+      retries: 3
