--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,6 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
-        <!-- <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>  -->
-
-        <!-- <version>4.5.0.Final</version> -->
-        <!-- <keycloak.version>3.1.0.Final</keycloak.version> -->
-        <!-- <keycloak.version>4.8.3.Final</keycloak.version> -->
-        <keycloak.version>9.0.2</keycloak.version>
-
         <cucumber.version>1.2.5</cucumber.version>
         <hamcrest-core.version>2.1</hamcrest-core.version>
     </properties>
@@ -79,35 +72,6 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Keycloak
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-spring-boot-starter</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-spring-security-adapter</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-undertow-adapter</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.keycloak</groupId>
-            <artifactId>keycloak-authz-client</artifactId>
-            <version>${keycloak.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <scope>runtime</scope>
-        </dependency>
-        -->
-
-
         <!-- Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -128,6 +92,11 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -173,15 +142,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--
-            <dependency>
-                <groupId>org.keycloak.bom</groupId>
-                <artifactId>keycloak-adapter-bom</artifactId>
-                <version>${keycloak.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            -->
         </dependencies>
     </dependencyManagement>
 
