--- a/data/gateway-keycloak/config/application.yml
+++ b/data/gateway-keycloak/config/application.yml
@@ -122,10 +122,29 @@ spring:
   redis:
     host: localhost
 ---
+spring:
+  profiles:
+    active: logging
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+  level:
+    root: INFO
+    org.springframework.web: DEBUG
+    org.springframework.web.HttpLogging: DEBUG
+    org.springframework.web.reactive: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
+    org.springframework.security.web: DEBUG
+    org.springframework.cloud.gateway: DEBUG
+    org.springframework.http.server.reactive: DEBUG
+    reactor.netty.http.client: DEBUG
+    reactor.ipc.netty: DEBUG
+    reactor.netty: DEBUG
+    org.springframework.jdbc: DEBUG
+#    org.springframework.boot.autoconfigure: DEBUG
+#logging.level.io.github.resilience4j: DEBUG
+#logging.level.org.springframework.cloud.gateway.filter.factory: TRACE
+---
 # https://gitlab.com/datastork-examples/spring-keycloak-example/blob/master/src/main/resources/application.yml
 
-# <intercept-url pattern="/*" access="isAnonymous()"/>
-intercept-url:
-  urls:
-  - pattern: "/api/**"
-    access: true # permitAll
