--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -21,4 +21,4 @@ RUN apk --no-cache --update add busybox-suid bash curl unzip sudo openssh-client
 COPY target/*.jar /opt/spring-cloud/lib/app.jar
 VOLUME /var/lib/spring-cloud/config-repo
 ENTRYPOINT ["/usr/bin/java"]
-CMD ["-jar", "/opt/spring-cloud/lib/app.jar"]
+CMD ["-jar", "/opt/spring-cloud/lib/app.jar", "spring.config.location=$CONFIG_LOCATION", "logging.config=$LOGGING_LOCATION"]
