--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       #KEYCLOAK_HOST: 192.168.1.7:9091 # IP privada en Mac
       KEYCLOAK_HOST: keycloak:8080 # IP network externa
       GW_HOST: gateway:8888
+      IBCS_MANAGER_HOST: web:8080
       CONFIG_LOCATION: file:/config/application.yml
       LOGGING_LOCATION: file:/config/logback-spring.xml
     volumes:
